pod-security/baseline/disallow-host-ports/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow-host-ports.yaml | kubectl apply -f -
