pod-security/baseline/disallow-host-ports/e2e/bad-deployment.yaml
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      - name: container02
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
      - name: container02
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: web-secure
          containerPort: 4443
          hostPort: 443
      - name: container02
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        ports:
        - name: web
          containerPort: 4443
          hostPort: 443
      - name: initcontainer02
        image: busybox:1.35
        ports:
        - name: admin
          containerPort: 8000
          protocol: TCP
      containers:
      - name: container01
        image: busybox:1.35
        ports:
        - name: dns
          containerPort: 5553
          hostPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        ports:
        - name: web
          containerPort: 4443
          hostPort: 443
      containers:
      - name: container01
        image: busybox:1.35
