pod-security/baseline/disallow-host-ports/e2e/bad-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
  - name: container02
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: web-secure
      containerPort: 4443
      hostPort: 443
  - name: container02
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    ports:
    - name: web
      containerPort: 4443
      hostPort: 443
  - name: initcontainer02
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    ports:
    - name: dns
      containerPort: 5553
      hostPort: 53
  containers:
  - name: container01
    image: busybox:1.35
