pod-security/baseline/disallow-host-ports/e2e/good-cronjob.yaml
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
            - name: web-insecure
              containerPort: 8080
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          - name: container02
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          - name: container02
            image: busybox:1.35
            ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
          - name: container02
            image: busybox:1.35
            ports:
            - name: admin
              containerPort: 8000
              protocol: TCP
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob09
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
          containers:
          - name: container01
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob10
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
          containers:
          - name: container01
            image: busybox:1.35
            ports:
            - name: web-insecure
              containerPort: 8080
