pod-security/baseline/disallow-host-ports/e2e/good-pod.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
    - name: web-insecure
      containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
  - name: container02
    image: busybox:1.35
    ports:
    - name: admin
      containerPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
  containers:
  - name: container01
    image: busybox:1.35
    ports:
    - name: web-insecure
      containerPort: 8080
