pod-security/baseline/disallow-host-ports/e2e/enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
spec:
  validationFailureAction: Enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
